--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,8 @@
         <json.b.version>1.0</json.b.version>
         <javax.json.version>1.1</javax.json.version>
         <weld.se.core.version>3.1.9.Final</weld.se.core.version>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
     </properties>
 
     <dependencies>
